force-app/main/default/objects/Order__c/fields/Total_Margin_Estimate_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin_Estimate_Rate__c</fullName>
    <formula>IF(TEXT(Order_type__c)=&apos;ZARL&apos;,0,Total_Estimate_Margin__c/Total_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Margin Estimate Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>