force-app/main/default/objects/Order__c/fields/Total_Margin_Level__c.field-meta.xml
<CustomField>
    <fullName>Total_Margin_Level__c</fullName>
    <formula>IF(
    (TEXT(Sales_Org__c)==&apos;5070&apos; &amp;&amp; !Is_YPF__c),
    IF(
        Margin_Rate__c=0,
        &apos;&apos;,
        IF(
            Margin_Rate__c*100&lt;10,
            IMAGE($Label.Red, &apos;Margin Level&apos; , 20, 21),  
            IF(
                Margin_Rate__c*100&lt;=20,
                IMAGE($Label.Yellow, &apos;Margin Level&apos; , 20, 21),
                IMAGE($Label.Green, &apos;Margin Level&apos; , 20, 21)
            )
        )
    ),
    IF(
        (Is_YPF__c || TEXT(Sales_Org__c)==&apos;5130&apos;),
        IF(
            Total_Margin_Estimate_Rate__c=0 || ISBLANK(Total_Margin_Estimate_Rate__c),
            &apos;&apos;,
            IF(
                Total_Margin_Estimate_Rate__c*100&lt;20,
                IMAGE($Label.Black, &apos;Margin Level&apos; , 20, 21),
                IF(
                    Total_Margin_Estimate_Rate__c*100&lt;28,
                    IMAGE($Label.Red, &apos;Margin Level&apos; , 20, 21),
                    IF(
                        Total_Margin_Estimate_Rate__c*100&lt;35,
                        IMAGE($Label.Yellow, &apos;Margin Level&apos; , 20, 21),
                        IMAGE($Label.Green, &apos;Margin Level&apos; , 20, 21)
                    )
                    
                )
            )
        ),
        IF(
            Margin_Rate__c=0,
            &apos;&apos;,
            IF(
                OR(
                    AND(TEXT(Deliver_Plant__c)==&apos;3010&apos;,Margin_Rate__c*100&lt;10),
                    AND(TEXT(Deliver_Plant__c)==&apos;3011&apos;,Margin_Rate__c*100&lt;20),
                    AND(TEXT(Deliver_Plant__c)==&apos;3020&apos;,Margin_Rate__c*100&lt;20)
                ),
                IMAGE($Label.Red, &apos;Margin Level&apos; , 20, 21),
                IF(
                    OR(
                        AND(TEXT(Deliver_Plant__c)==&apos;3010&apos;,Margin_Rate__c*100&lt;=20),
                        AND(TEXT(Deliver_Plant__c)==&apos;3011&apos;,Margin_Rate__c*100&lt;=40),
                        AND(TEXT(Deliver_Plant__c)==&apos;3020&apos;,Margin_Rate__c*100&lt;=35)
                    ),
                    IMAGE($Label.Yellow, &apos;Margin Level&apos; , 20, 21),
                    IMAGE($Label.Green, &apos;Margin Level&apos; , 20, 21)
                )
            )
        )
    )
)</formula>
    <label>Total Margin Level</label>
    <type>Text</type>
</CustomField>