force-app/main/default/objects/Order__c/fields/Ultra_Credit__c.field-meta.xml
<CustomField>
    <fullName>Ultra_Credit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excess Credit Limit</label>
    <type>Checkbox</type>
</CustomField>