force-app/main/default/objects/Order__c/fields/User_Plant__c.field-meta.xml
<CustomField>
    <fullName>User_Plant__c</fullName>
    <formula>TEXT( Owner:User.Delivery_Plant__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&apos;s Plant</label>
    <type>Text</type>
</CustomField>