force-app/main/default/objects/Order__c/fields/View_Consignment_Inventory_URL__c.field-meta.xml
<CustomField>
    <fullName>View_Consignment_Inventory_URL__c</fullName>
    <formula>IF(
				TEXT(Deliver_Plant__c)=&apos;5130&apos;,
    &apos;00OO4000009JhGzMAK&apos;,
				&apos;00OPo00000VaWfRMAV&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Consignment Inventory URL</label>
    <type>Text</type>
</CustomField>