force-app/main/default/objects/Order__c/fields/ZAR1_Order__c.field-meta.xml
<CustomField>
    <fullName>ZAR1_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ZAR1 Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Order (ZAR1 Order)</relationshipLabel>
    <relationshipName>ZAR1</relationshipName>
    <type>Lookup</type>
</CustomField>