force-app/main/default/objects/Order__c/fields/ZMX1_User__c.field-meta.xml
<CustomField>
    <fullName>ZMX1_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ZMX1 User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Order</relationshipName>
    <type>Lookup</type>
</CustomField>