force-app/main/default/objects/Order__c/recordTypes/Model_B.recordType-meta.xml
<RecordType>
    <fullName>Model_B</fullName>
    <active>true</active>
    <label>Model B</label>
</RecordType>