force-app/main/default/objects/Order__c/recordTypes/Model_C.recordType-meta.xml
<RecordType>
    <fullName>Model_C</fullName>
    <active>true</active>
    <label>Model C</label>
</RecordType>