force-app/main/default/objects/Order__c/validationRules/Both_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Both_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(
    AND(
        ISBLANK(Inco_Location1__c) ,
        NOT(ISBLANK(TEXT(Incoterms__c )))
    ),
    AND(
        NOT(ISBLANK(Inco_Location1__c)),
        ISBLANK(TEXT(Incoterms__c ))
    )
),NOT(SAP_Order__c))</errorConditionFormula>
    <errorMessage>Both Incoterms and Inco Location1 are required</errorMessage>
</ValidationRule>