force-app/main/default/objects/Order__c/validationRules/Can_not_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Quotes__c)) ,
    OR(
        ISCHANGED(Customer__c),
        ISCHANGED(Sales_Org__c),
        ISCHANGED(Distr_Channel__c),
        ISCHANGED(Deliver_Plant__c)
        ,ISCHANGED(Business_Model__c),
        ISCHANGED(Terms_Of_Payment__c)
    )
 )</errorConditionFormula>
    <errorMessage>You can&apos;t change the fields populated from the quotation.</errorMessage>
</ValidationRule>