force-app/main/default/objects/Order__c/validationRules/Can_Not_Change_Invoice.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Not_Change_Invoice</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Invoice__c) , Order_Item_Number__c &gt;0)</errorConditionFormula>
    <errorDisplayField>Invoice__c</errorDisplayField>
    <errorMessage>Can&apos;t change invoice , please remove order item</errorMessage>
</ValidationRule>