force-app/main/default/objects/Order__c/validationRules/Can_not_change_order_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_change_order_type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Order_type__c) ,NOT(ISBLANK(Quotes__c)))</errorConditionFormula>
    <errorMessage>You can&apos;t update the order type since you have already added order details</errorMessage>
</ValidationRule>