force-app/main/default/objects/Order__c/validationRules/Can_Not_Change_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Not_Change_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Order_Reason__c) , Order_Item_Number__c &gt;0,TEXT(Order_type__c)=&apos;ZMX3&apos;)</errorConditionFormula>
    <errorDisplayField>Order_Reason__c</errorDisplayField>
    <errorMessage>Can&apos;t change reason, please remove order item</errorMessage>
</ValidationRule>