force-app/main/default/objects/Order__c/validationRules/Can_Not_Change_Reference_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_Not_Change_Reference_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Reference_Order__c) , Order_Item_Number__c &gt;0,TEXT(Order_type__c)!=&apos;ZMX8&apos;)</errorConditionFormula>
    <errorDisplayField>Reference_Order__c</errorDisplayField>
    <errorMessage>Can&apos;t change reference order , please remove order item</errorMessage>
</ValidationRule>