force-app/main/default/objects/Order__c/validationRules/Can_not_Change_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_Change_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Order_type__c) ,Order_Item_Number__c!=0)</errorConditionFormula>
    <errorMessage>Order has items,order type can&apos;t change</errorMessage>
</ValidationRule>