force-app/main/default/objects/Order__c/validationRules/Can_not_pick_this_org.validationRule-meta.xml
<ValidationRule>
    <fullName>Can_not_pick_this_org</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(SAP_Order__c),OR(BEGINS(TEXT(Sales_Org__c) , &apos;1&apos;) ,BEGINS( TEXT(Sales_Org__c) , &apos;2&apos;)))</errorConditionFormula>
    <errorDisplayField>Sales_Org__c</errorDisplayField>
    <errorMessage>Can not select this sales org</errorMessage>
</ValidationRule>