force-app/main/default/objects/Order__c/validationRules/Cannot_Change_Order_Currency.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Order_Currency</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Currency__c) , Order_Item_Number__c &gt;0)</errorConditionFormula>
    <errorDisplayField>Currency__c</errorDisplayField>
    <errorMessage>Cannot change order currency, please remove order item</errorMessage>
</ValidationRule>