force-app/main/default/objects/Order__c/validationRules/CannotOrderType.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotOrderType</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT(SAP_Order__c),  CONTAINS(&quot;ZMX3,ZMX4,ZMX8,ZAR3,ZAR4,ZAR5,ZAR6,ZAR7,ZAR8,ZAR9,ZARM&quot;, TEXT(Order_type__c)) )</errorConditionFormula>
    <errorDisplayField>Order_type__c</errorDisplayField>
    <errorMessage>Can not select this order type</errorMessage>
</ValidationRule>