force-app/main/default/objects/Order__c/validationRules/CheckCustomerPo.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckCustomerPo</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Cust_Reference__c )  &amp;&amp;   ISPICKVAL( Sales_Org__c , &apos;5070&apos;) &amp;&amp;  RecordType_Name__c = &apos;Model_C&apos; &amp;&amp;  $Profile.Name &lt;&gt; &apos;System Administrator&apos;</errorConditionFormula>
    <errorDisplayField>Cust_Reference__c</errorDisplayField>
    <errorMessage>When sales org is 5070, the customer&apos;s po is required</errorMessage>
</ValidationRule>