force-app/main/default/objects/Order__c/validationRules/Create_Retrun_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Create_Retrun_Order</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Quotes__c) , TEXT(Order_type__c)!=&apos;ZAR2&apos;,TEXT(Order_type__c)!=&apos;ZMX2&apos;,RecordType.Name=&apos;Model B&apos;,NOT(SAP_Order__c)  )</errorConditionFormula>
    <errorDisplayField>Order_type__c</errorDisplayField>
    <errorMessage>Can only create return order</errorMessage>
</ValidationRule>