force-app/main/default/objects/Order__c/validationRules/DownPaymentRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>DownPaymentRequired</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    
    AND(
        TEXT(Order_type__c )!=&apos;ZMX1&apos;,
        NOT(Down_Payment__c =null)
    )
)</errorConditionFormula>
    <errorDisplayField>Down_Payment__c</errorDisplayField>
    <errorMessage>Standard order MX should link to a downpayment order, other orde types can not link to any downpayment order.</errorMessage>
</ValidationRule>