force-app/main/default/objects/Order__c/validationRules/InvoiceRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>InvoiceRequired</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
    AND(
								!SAP_Order__c,
        TEXT(Order_type__c)=&apos;ZAR2&apos;,
        OR(
            ISNULL(Invoice__c),
            ISBLANK(Invoice__c)
        )
    ),

    AND(
								!SAP_Order__c,
        TEXT(Order_type__c)!=&apos;ZAR2&apos;,
        NOT(
            OR(
                ISNULL(Invoice__c),
                ISBLANK(Invoice__c)
            )
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Invoice__c</errorDisplayField>
    <errorMessage>Only ZAR2 order can choose invoice</errorMessage>
</ValidationRule>