force-app/main/default/objects/Order__c/validationRules/Order_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(
        TEXT(Order_type__c)= &apos;ZARA&apos;,
        TEXT(Order_type__c)= &apos;ZARF&apos;,
        TEXT(Order_type__c)= &apos;ZAR2&apos;,
        TEXT(Order_type__c)= &apos;ZMX2&apos;
    ),
    TEXT(Order_Reason__c)=null
)</errorConditionFormula>
    <errorDisplayField>Order_Reason__c</errorDisplayField>
    <errorMessage>Order Reason Required</errorMessage>
</ValidationRule>