force-app/main/default/objects/Order__c/validationRules/Reference_Order_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Reference_Order_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNULL(Reference_Order__c),
    ISBLANK(Reference_Order__c),
    OR(     
        Reference_Order__r.Customer__c &lt;&gt; Customer__c, 
        TEXT(Reference_Order__r.Status__c)!=&apos;Approved&apos;, 
        AND(
            TEXT(Order_type__c)=&apos;ZMX3&apos;,
            TEXT(Reference_Order__r.Order_type__c)!=&apos;ZMX1&apos;
        ),
                    AND(
            TEXT(Order_type__c)=&apos;ZMX2&apos;,
            TEXT(Reference_Order__r.Order_type__c)!=&apos;ZMX1&apos;
        )
    ) 
)</errorConditionFormula>
    <errorDisplayField>Reference_Order__c</errorDisplayField>
    <errorMessage>The customer in the reference order is different from the customer in the actual order, or the reference order has not been approved, or the reference order type is incorrect.</errorMessage>
</ValidationRule>