force-app/main/default/objects/Order__c/validationRules/YPF_CheckCommission.validationRule-meta.xml
<ValidationRule>
    <fullName>YPF_CheckCommission</fullName>
    <active>true</active>
    <errorConditionFormula>Is_YPF__c &amp;&amp; 
	(NOT(ISBLANK( Commission_Amount_New__c )) || NOT(ISBLANK( TEXT(Commission_Calculation_Method__c) )) || 
	NOT(ISBLANK( Commission_Percentage__c )) || NOT(ISBLANK( Commission_To__c )) || 
	NOT(ISBLANK( TEXT(Commission_Type__c) ))
	)</errorConditionFormula>
    <errorMessage>You cannot fill the commission information in YPF order.</errorMessage>
</ValidationRule>