force-app/main/default/objects/Order__c/validationRules/YPFCanOnlyCreateModelcOrder.validationRule-meta.xml
<ValidationRule>
    <fullName>YPFCanOnlyCreateModelcOrder</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( $Setup.GlobalSetting__c.Ignore_Validation__c )&amp;&amp;
TEXT(Business_Model__c)  &lt;&gt;  &apos;C0&apos; &amp;&amp;  Is_YPF__c &amp;&amp; $Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; $Profile.Name &lt;&gt; &apos;Interface Profile&apos;</errorConditionFormula>
    <errorDisplayField>Business_Model__c</errorDisplayField>
    <errorMessage>Business Model can only be ModelC</errorMessage>
</ValidationRule>