force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sales_Org__c</columns>
    <columns>Customer__c</columns>
    <columns>Order_type__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Total_Margin_Estimate_Rate__c</columns>
    <columns>Total_Margin_Level__c</columns>
    <columns>Currency__c</columns>
    <columns>Req_Deliv_Date__c</columns>
    <columns>Status__c</columns>
    <columns>SAP_Order_Code__c</columns>
    <columns>Terms_Of_Payment__c</columns>
    <columns>Approve_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>