force-app/main/default/objects/Order__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sales_Org__c</columns>
    <columns>Customer__c</columns>
    <columns>Order_type__c</columns>
    <columns>Order_Amount_USD__c</columns>
    <columns>Total_Margin_Estimate_Rate__c</columns>
    <columns>Total_Margin_Level__c</columns>
    <columns>Currency__c</columns>
    <columns>Req_Deliv_Date__c</columns>
    <columns>Status__c</columns>
    <columns>SAP_Order_Code__c</columns>
    <columns>Terms_Of_Payment__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Approve_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approving</value>
    </filters>
    <label>Approving Orders</label>
</ListView>