force-app/main/default/objects/Order__c/listViews/Copy_of_AR_Rainbow_B.listView-meta.xml
<ListView>
    <fullName>Copy_of_AR_Rainbow_B</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Business_Model__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Sales_Org__c</columns>
    <columns>Order_type__c</columns>
    <columns>Order_Amount_USD__c</columns>
    <columns>Status__c</columns>
    <columns>Sync_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>5070</value>
    </filters>
    <filters>
        <field>Customer_MDG_Code__c</field>
        <operation>equals</operation>
        <value>0000005130</value>
    </filters>
    <label>AR Rainbow B sell to Agroterrum</label>
    <sharedTo>
        <group>X5070</group>
    </sharedTo>
</ListView>