force-app/main/default/objects/Order__c/listViews/Copy_of_MX_Agroterrum_C.listView-meta.xml
<ListView>
    <fullName>Copy_of_MX_Agroterrum_C</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Order_type__c</columns>
    <columns>Business_Model__c</columns>
    <columns>Deliver_Plant__c</columns>
    <columns>Cust_Reference__c</columns>
    <columns>Order_Amount_USD__c</columns>
    <columns>Terms_Of_Payment__c</columns>
    <columns>SAP_Order_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Approve_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Is_Upload_Attachment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>3010</value>
    </filters>
    <filters>
        <field>MDG_Customer_Code__c</field>
        <operation>equals</operation>
        <value>0000003020</value>
    </filters>
    <label>MX Model B sell to Agroterrum</label>
    <sharedTo>
        <group>X3020</group>
        <role>Mexico_Agroterrum_Finance_Controller</role>
        <role>Mexico_Agroterrum_General_Manager</role>
        <role>Mexico_Agroterrum_Marketing_Manager</role>
        <role>Mexico_Agroterrum_Sales_Rep</role>
        <role>Mexico_Area_Head</role>
        <role>Mexico_BackOffice_Finance</role>
        <role>Mexico_Rainbow_Agro_General_Manager</role>
        <role>Mexico_Rainbow_Agro_Logistics</role>
    </sharedTo>
</ListView>