force-app/main/default/objects/Order__c/listViews/MX3010view.listView-meta.xml
<ListView>
    <fullName>MX3010view</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Order_type__c</columns>
    <columns>Business_Model__c</columns>
    <columns>Deliver_Plant__c</columns>
    <columns>Cust_Reference__c</columns>
    <columns>Order_Amount_USD__c</columns>
    <columns>Terms_Of_Payment__c</columns>
    <columns>SAP_Order_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Approve_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Is_Upload_Attachment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Deliver_Plant__c</field>
        <operation>equals</operation>
        <value>3010,2210</value>
    </filters>
    <label>MX Rainbow B</label>
    <sharedTo>
        <role>HQ_President</role>
        <role>Mexico_Area_Head</role>
        <role>Mexico_BackOffice_Finance</role>
        <role>Mexico_Country_Manager</role>
        <role>Mexico_Rainbow_Agro_Logistics</role>
        <roleAndSubordinatesInternal>Mexico_Rainbow_Agro_Model_B_Sales_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>