force-app/main/default/objects/Order__c/listViews/Mx_Agroterrum_C.listView-meta.xml
<ListView>
    <fullName>Mx_Agroterrum_C</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Order_type__c</columns>
    <columns>Business_Model__c</columns>
    <columns>Deliver_Plant__c</columns>
    <columns>Order_Amount_USD__c</columns>
    <columns>Total_Margin_Level__c</columns>
    <columns>Margin_Rate__c</columns>
    <columns>Terms_Of_Payment__c</columns>
    <columns>SAP_Order_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Approve_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>3020</value>
    </filters>
    <label>MX Agroterrum C</label>
    <sharedTo>
        <group>X3020</group>
        <role>HQ_Commercial</role>
        <role>Mexico_Area_Head</role>
        <role>Mexico_Country_Manager</role>
        <role>Mexico_Rainbow_Agro_Logistics</role>
        <role>Mexico_Rainbow_Agro_Model_B_Sales_Manager</role>
    </sharedTo>
</ListView>