force-app/main/default/objects/Order__c/listViews/MX_CPLUS_Delivery_Invoice_Status_Tracking.listView-meta.xml
<ListView>
    <fullName>MX_CPLUS_Delivery_Invoice_Status_Tracking</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Order_type__c</columns>
    <columns>Cust_Reference__c</columns>
    <columns>Status__c</columns>
    <columns>Currency__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Delivery_Amount__c</columns>
    <columns>Invoice_Amount__c</columns>
    <columns>Amount_of_refund__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Remaining_Amount__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Deliver_Plant__c</field>
        <operation>equals</operation>
        <value>3011</value>
    </filters>
    <label>MX C+ Delivery &amp; Invoice Status Tracking</label>
    <sharedTo>
        <group>X3011</group>
    </sharedTo>
</ListView>